   Version 0.49
   Version 0.48
   Version 0.47
   Version 0.46
   Version 0.45
   Version 0.44
   Version 0.43
   Version 0.42
   Version 0.41
   Version 0.40
   Version 0.39
   Version 0.38
   Version 0.37
   Version 0.36
   Version 0.35

-----------------------------------------------------------------------
 Version 0.60
 ============

 Released on 
  
 New features and improvements:

   - Accelerators: define new keys in Dossier menu (todo #1204).
   - AccountSelect, OpeTemplateSelect: save settings before hiding the dialog.
   - BalanceRender: improve appearance of header notes (todo #1191).
   - OpeTemplate: make the treeview sortable (todo #1200).
   - RecurrentModel: allow to be duplicated (todo #1206).
   - RecurrentModel: takes advantage of ofaITVColumnable and companion interfaces (todo #1182).
   - RecurrentNew: managed as a singleton (todo #1213).
   - RecurrentRun: takes advantage of ofaITVColumnable and companion interfaces (todo #1182).
   - SettlementPage: takes advantage of new display facilities.
   - TVAForm: takes advantage of ofaITVColumnable and companion interfaces (todo #1182).
   - TVARecord: takes advantage of ofaITVColumnable and companion interfaces (todo #1182).
   - Improve formulas updates (todo #1214).

 Bug fixes:

   - AccountSelect: close the window on account selection (todo #1187).
   - IPrintable: does not say "succesfully printed" when cancelled (todo #1188).
   - ITreeAdder: fix columns adding (todo #1190).
   - LedgerClose: fix typo.
   - OpeTemplatePage: fix row activation.
   - OpeTemplateSelect: fix missing getter.
   - OpeTemplateStore: fix row insertion (todo #1189).
   - PeriodClose: fix the 'archive accounts' user preference (todo #1205).
   - RecurrentModel: fix update on OpeTemplate mnemmonic modification (todo #1203).
   - RecurrentModel: fix update on 'never' periodicity.
   - TVBin: Fix sort on incomplete rows (todo #1199).
   - AccountSelect, OpeTemplateSelect: fix columns visibility propagation (todo #1215).
