@@ -316,6 +316,7 @@ setup_columns( ofaRecurrentModelTreeview *self )
 	ofa_tvbin_add_column_text   ( OFA_TVBIN( self ), REC_MODEL_COL_DEF_AMOUNT1,        _( "Amount 1" ), _( "Updatable amount n° 1" ));
 	ofa_tvbin_add_column_text   ( OFA_TVBIN( self ), REC_MODEL_COL_DEF_AMOUNT2,        _( "Amount 2" ), _( "Updatable amount n° 2" ));
 	ofa_tvbin_add_column_text   ( OFA_TVBIN( self ), REC_MODEL_COL_DEF_AMOUNT3,        _( "Amount 3" ), _( "Updatable amount n° 3" ));
+	ofa_tvbin_add_column_text   ( OFA_TVBIN( self ), REC_MODEL_COL_ENABLED,            _( "Enabled" ),      NULL );
 	ofa_tvbin_add_column_text_rx( OFA_TVBIN( self ), REC_MODEL_COL_NOTES,              _( "Notes" ),        NULL );
 	ofa_tvbin_add_column_pixbuf ( OFA_TVBIN( self ), REC_MODEL_COL_NOTES_PNG,             "",           _( "Notes indicator" ));
 	ofa_tvbin_add_column_text   ( OFA_TVBIN( self ), REC_MODEL_COL_UPD_USER,           _( "User" ),     _( "Last update user" ));
